router code restructuring

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
 <body>
+    <div id="header">
+        Loading tabs...
+    </div>
     <div id="page">
         Loading....
     </div>
